JEAP-6536 Remove aggregate ProcessEvent